{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 38,
  "lineage": "2df54b49-2da8-bdd2-a03b-977512706678",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:078169834649:loadbalancer/app/alb/6ef4715503714ecb",
            "arn_suffix": "app/alb/6ef4715503714ecb",
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-68569546.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:078169834649:loadbalancer/app/alb/6ef4715503714ecb",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e99be393451202fd"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0181364e9a68f9c52"
              },
              {
                "subnet_id": "subnet-01e36b602b6be1b5c"
              }
            ],
            "subnets": [
              "subnet-0181364e9a68f9c52",
              "subnet-01e36b602b6be1b5c"
            ],
            "vpc_id": "vpc-0d0f495bd2a8fe1fb",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "module.sg.aws_security_group.my-sg",
            "module.vpc.aws_subnet.my-subnet",
            "module.vpc.aws_vpc.my-vpc",
            "module.vpc.data.aws_availability_zones.zone"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:078169834649:listener/app/alb/6ef4715503714ecb/ea52420ff9b5032c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:078169834649:targetgroup/TG/d397eceb822a54fa",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:078169834649:listener/app/alb/6ef4715503714ecb/ea52420ff9b5032c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:078169834649:loadbalancer/app/alb/6ef4715503714ecb",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_alb.alb",
            "module.alb.aws_alb_target_group.alb-target",
            "module.sg.aws_security_group.my-sg",
            "module.vpc.aws_subnet.my-subnet",
            "module.vpc.aws_vpc.my-vpc",
            "module.vpc.data.aws_availability_zones.zone"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "alb-target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:078169834649:targetgroup/TG/d397eceb822a54fa",
            "arn_suffix": "targetgroup/TG/d397eceb822a54fa",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:078169834649:targetgroup/TG/d397eceb822a54fa",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d0f495bd2a8fe1fb"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "TG-attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:078169834649:targetgroup/TG/d397eceb822a54fa-20231205044730899300000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:078169834649:targetgroup/TG/d397eceb822a54fa",
            "target_id": "i-005a61e5175e7d304"
          },
          "dependencies": [
            "module.alb.aws_alb_target_group.alb-target",
            "module.ec2.aws_instance.my-ec2",
            "module.ec2.data.aws_availability_zones.zone",
            "module.sg.aws_security_group.my-sg",
            "module.vpc.aws_subnet.my-subnet",
            "module.vpc.aws_vpc.my-vpc",
            "module.vpc.data.aws_availability_zones.zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:078169834649:targetgroup/TG/d397eceb822a54fa-20231205044730858700000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:078169834649:targetgroup/TG/d397eceb822a54fa",
            "target_id": "i-0d3a684b62533d54c"
          },
          "dependencies": [
            "module.alb.aws_alb_target_group.alb-target",
            "module.ec2.aws_instance.my-ec2",
            "module.ec2.data.aws_availability_zones.zone",
            "module.sg.aws_security_group.my-sg",
            "module.vpc.aws_subnet.my-subnet",
            "module.vpc.aws_vpc.my-vpc",
            "module.vpc.data.aws_availability_zones.zone"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e83be366243f524a",
            "arn": "arn:aws:ec2:us-east-2:078169834649:instance/i-005a61e5175e7d304",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-005a61e5175e7d304",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-000fc71b0f3347b92",
            "private_dns": "ip-10-0-1-45.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.45",
            "public_ip": "3.145.14.37",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-026ae6df8e5b8525c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0181364e9a68f9c52",
            "tags": {
              "Name": "ec2-1"
            },
            "tags_all": {
              "Name": "ec2-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e99be393451202fd"
            ]
          },
          "dependencies": [
            "module.ec2.data.aws_availability_zones.zone",
            "module.sg.aws_security_group.my-sg",
            "module.vpc.aws_subnet.my-subnet",
            "module.vpc.aws_vpc.my-vpc",
            "module.vpc.data.aws_availability_zones.zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e83be366243f524a",
            "arn": "arn:aws:ec2:us-east-2:078169834649:instance/i-0d3a684b62533d54c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d3a684b62533d54c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01c0918bd7e6f9817",
            "private_dns": "ip-10-0-2-209.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.209",
            "public_ip": "18.218.89.210",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06f192e5a710fe135",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01e36b602b6be1b5c",
            "tags": {
              "Name": "ec2-2"
            },
            "tags_all": {
              "Name": "ec2-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e99be393451202fd"
            ]
          },
          "dependencies": [
            "module.ec2.data.aws_availability_zones.zone",
            "module.sg.aws_security_group.my-sg",
            "module.vpc.aws_subnet.my-subnet",
            "module.vpc.aws_vpc.my-vpc",
            "module.vpc.data.aws_availability_zones.zone"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:078169834649:security-group/sg-0e99be393451202fd",
            "description": "allow the traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e99be393451202fd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "mt-sg-group",
            "name_prefix": "",
            "owner_id": "078169834649",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Security-Group"
            },
            "tags_all": {
              "Name": "Security-Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0f495bd2a8fe1fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my-IG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:078169834649:internet-gateway/igw-06ddc90a041c892e1",
            "id": "igw-06ddc90a041c892e1",
            "owner_id": "078169834649",
            "tags": {
              "Name": "My_IG"
            },
            "tags_all": {
              "Name": "My_IG"
            },
            "vpc_id": "vpc-0d0f495bd2a8fe1fb"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:078169834649:route-table/rtb-0cd5e914abe545dac",
            "id": "rtb-0cd5e914abe545dac",
            "owner_id": "078169834649",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06ddc90a041c892e1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-route"
            },
            "tags_all": {
              "Name": "my-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0f495bd2a8fe1fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.my-IG",
            "module.vpc.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d70d1d12d491f23",
            "route_table_id": "rtb-0cd5e914abe545dac",
            "subnet_id": "subnet-0181364e9a68f9c52"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.my-IG",
            "module.vpc.aws_route_table.my-route-table",
            "module.vpc.aws_subnet.my-subnet",
            "module.vpc.aws_vpc.my-vpc",
            "module.vpc.data.aws_availability_zones.zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b0a2657ea4e057a7",
            "route_table_id": "rtb-0cd5e914abe545dac",
            "subnet_id": "subnet-01e36b602b6be1b5c"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.my-IG",
            "module.vpc.aws_route_table.my-route-table",
            "module.vpc.aws_subnet.my-subnet",
            "module.vpc.aws_vpc.my-vpc",
            "module.vpc.data.aws_availability_zones.zone"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:078169834649:subnet/subnet-0181364e9a68f9c52",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0181364e9a68f9c52",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "078169834649",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public1"
            },
            "tags_all": {
              "Name": "Public1"
            },
            "vpc_id": "vpc-0d0f495bd2a8fe1fb"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my-vpc",
            "module.vpc.data.aws_availability_zones.zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:078169834649:subnet/subnet-01e36b602b6be1b5c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e36b602b6be1b5c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "078169834649",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public2"
            },
            "tags_all": {
              "Name": "Public2"
            },
            "vpc_id": "vpc-0d0f495bd2a8fe1fb"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my-vpc",
            "module.vpc.data.aws_availability_zones.zone"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:078169834649:vpc/vpc-0d0f495bd2a8fe1fb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0224ffe7f87ec86bd",
            "default_route_table_id": "rtb-01913f85a6c75f987",
            "default_security_group_id": "sg-0adf8082d1c088cd3",
            "dhcp_options_id": "dopt-6f43b804",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d0f495bd2a8fe1fb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01913f85a6c75f987",
            "owner_id": "078169834649",
            "tags": {
              "Name": "my-vpc"
            },
            "tags_all": {
              "Name": "my-vpc"
            }
          }
        }
      ]
    }
  ]
}